--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "seperate",
+  "name": "simpleblog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "browserify": "^17.0.0",
+    "content-based-recommender": "^1.5.0",
     "firebase": "^9.6.6",
+    "plotly.js": "^2.9.0",
     "react": "^17.0.2",
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.0",
-    "react-router": "^6.2.1",
+    "react-plotly.js": "^2.5.1",
+    "react-plotlyjs": "^0.4.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
@@ -39,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "react-require": "^1.0.1"
   }
 }
